--- a/dataproject/CSF_data_generation.ipynb
+++ b/dataproject/CSF_data_generation.ipynb
@@ -478,7 +478,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -684,7 +686,7 @@
     "\n",
     "csf = csf\n",
     "\n",
-    "print(csf.head(-4))"
+    "print(csf.head(4))"
    ]
   },
   {
