--- a/examproject/examproject.ipynb
+++ b/examproject/examproject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,13 +41,6 @@
     "from scipy import interpolate\n",
     "import ipywidgets as widgets\n",
     "from ipywidgets import interactive"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Inspiration on code and how to solve the questions are found at: https://github.com/NumEconCopenhagen"
    ]
   },
   {
@@ -169,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 143,
    "metadata": {
     "scrolled": true
    },
@@ -240,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -269,13 +262,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<scipy.interpolate.interpolate.RegularGridInterpolator at 0x1326340ba8>"
+       "<scipy.interpolate.interpolate.RegularGridInterpolator at 0x13310a7a20>"
       ]
      },
      "metadata": {},
@@ -306,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -339,8 +332,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'm a bit in doubt wether potential wage income means $w*h$ or $w$ by itself. In both cases the answer is yes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
     }
    ],
    "source": [
-    "# I set w=0.99<b=1\n",
+    "# For w<b I simply set w to 0.99<1:\n",
     "w = 0.99\n",
     "\n",
     "v2_vec,l2_vec = exam.solve_period_2(w,rho,b,gamma,h_vec)\n",
@@ -406,7 +406,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even though the wage is lower than the benefits, if the accumulation of human capital is hich enough. She will still gain a higher utility for participating in the workforce than not."
+    "As seen from the graphs: if human capital is high enough, then she will work inboth period 1 and 2.\n",
+    "\n",
+    "If we look at the other situation where $w*h<b => h<\\frac{b}{w}=\\frac{1}{2}=0.5$. Then we can simply look at the values generated in question 1 and 2. \n",
+    "- In period 1: She will work if $h_2>0.567$ (greater than $0.5$)\n",
+    "- In period 2: She will work if $h_1>0.355$ (smaller than $0.5$)\n",
+    "\n",
+    "In period 2 she will never work when $w*h$ is higher than b, as she won't start working until human capital is greater than 0.567 meaning the income $w*h$ won't be higher than $0.5$.\n",
+    "\n",
+    "But in period 1 she will work, even though $w*h<b$. Namely when $h$ is above $0.355$. This is because of the expectations to the human capital accumulation in period two."
    ]
   },
   {
@@ -1771,7 +1779,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As seen from changing the slider "
+    "When all endowments are equal the utility distribution is more right skewed than in the case of different endowmentss. The mean utility is a bit lower, but so is the variance.\n",
+    "\n",
+    "As seen from changing the slider the utility distribution changes from being right skewed to normally distributed goin from 0 towards 0.3 from 0.3 the distribution starts getting additionally left skewed."
    ]
   }
  ],
